# coderdata

./: .buildinfo  .dockerignore  .gitignore  APIreference.html  DISCLAIMER  LICENSE  LICENSE_DISCLAIMER  README.md  add_code_guide.html  beatAMLDataFormat.R  beataml_samples.csv  build.out  buildInitialDataset.py  cellLineTypes.csv  contribution.html  contribution_guide.html  datasets_included.html  fimmDataFormat.R  fimmDoseResponse  fit_curve.py  gdscv2.0  genindex.html  improveDataFiles.R  index.html  loadPGXdata.R  mpnst_ignore_chems.txt  mpnst_samples.csv  mpnstpdx_ignore_chems.txt  objects.inv  prismDataFormat.R  processPGXData.py  py-modindex.html  pyproject.toml  requirements.txt  sampleSummary.R  search.html  searchindex.js  setup.py  tavorDataFormat.R  tavorDoseResponse.tsv  (+2 more)
_notebooks/: docsite_tutorial.html
_sources/: contribution_guide.rst.txt  datasets_included.rst.txt  index.rst.txt  tutorials.rst.txt
_static/: custom.css  dataset_curve_metric_summary.csv  docsite_tutorial.html
beatAML/: Data Available for Proteomic Samples.xlsx  GetBeatAML.py  GetBeatAMLData.ipynb  PNNL_clinical_summary_12_08_2021_updated_OS_4patients_02_28_2022.csv  Proteomic_sample_map_beatAML.csv  beataml_wes_wv1to4_mutations_177_samples.txt  drug_response.csv
benchmark/: README.md  deeptta_rna_model.py  gnn_utils.py  requirements.txt  test.py  train.py
candle_bmd/: 01-cellLineSamples.R  02-cellLineDepMap.R  Proteomics_restructure_DreamAI_impute.Rmd  README.md  improveDataFiles.R
cell_line/: DepMap_Argonne_Mapping.csv  Proteomics_restructure.ipynb  README.md  buildInitialDataset.py  evalDrugData.py  getLatestCCLE.R  initialGeneDB.R  proteomics_restructure.py  remapDrugsToSmiles.R
cell_line_proteomics/: Proteomics_DreamAI_impute.Rmd  (+2 more)
(+427 files in other folders)
